@@ -103,6 +103,8 @@ id|ctx
 suffix:semicolon
 r_int
 id|err
+op_assign
+l_int|0
 comma
 id|rc
 suffix:semicolon
@@ -151,14 +153,11 @@ id|m
 r_goto
 id|map_err_out
 suffix:semicolon
-id|err
+id|ctx
 op_assign
 id|get_attr_search_ctx
 c_func
 (paren
-op_amp
-id|ctx
-comma
 id|dir_ni
 comma
 id|m
@@ -167,11 +166,19 @@ suffix:semicolon
 r_if
 c_cond
 (paren
-id|err
+op_logical_neg
+id|ctx
 )paren
+(brace
+id|err
+op_assign
+op_minus
+id|ENOMEM
+suffix:semicolon
 r_goto
 id|unm_err_out
 suffix:semicolon
+)brace
 multiline_comment|/* Find the index root attribute in the mft record. */
 r_if
 c_cond
@@ -2264,14 +2271,11 @@ r_goto
 id|err_out
 suffix:semicolon
 )brace
-id|err
+id|ctx
 op_assign
 id|get_attr_search_ctx
 c_func
 (paren
-op_amp
-id|ctx
-comma
 id|ndir
 comma
 id|m
@@ -2280,11 +2284,19 @@ suffix:semicolon
 r_if
 c_cond
 (paren
-id|err
+op_logical_neg
+id|ctx
 )paren
+(brace
+id|err
+op_assign
+op_minus
+id|ENOMEM
+suffix:semicolon
 r_goto
 id|unm_err_out
 suffix:semicolon
+)brace
 multiline_comment|/*&n;&t; * Allocate a buffer to store the current name being processed&n;&t; * converted to format determined by current NLS.&n;&t; */
 id|name
 op_assign
