@@ -958,14 +958,11 @@ id|vi-&gt;i_mode
 op_or_assign
 id|S_IFREG
 suffix:semicolon
-id|err
+id|ctx
 op_assign
 id|get_attr_search_ctx
 c_func
 (paren
-op_amp
-id|ctx
-comma
 id|ni
 comma
 id|m
@@ -974,11 +971,19 @@ suffix:semicolon
 r_if
 c_cond
 (paren
-id|err
+op_logical_neg
+id|ctx
 )paren
+(brace
+id|err
+op_assign
+op_minus
+id|ENOMEM
+suffix:semicolon
 r_goto
 id|unm_err_out
 suffix:semicolon
+)brace
 multiline_comment|/*&n;&t; * Find the standard information attribute in the mft record. At this&n;&t; * stage we haven&squot;t setup the attribute list stuff yet, so this could&n;&t; * in fact fail if the standard information is in an extent record, but&n;&t; * I don&squot;t think this actually ever happens.&n;&t; */
 r_if
 c_cond
@@ -3533,14 +3538,11 @@ op_assign
 op_amp
 id|ntfs_mft_aops
 suffix:semicolon
-id|err
+id|ctx
 op_assign
 id|get_attr_search_ctx
 c_func
 (paren
-op_amp
-id|ctx
-comma
 id|ni
 comma
 id|m
@@ -3549,11 +3551,19 @@ suffix:semicolon
 r_if
 c_cond
 (paren
-id|err
+op_logical_neg
+id|ctx
 )paren
+(brace
+id|err
+op_assign
+op_minus
+id|ENOMEM
+suffix:semicolon
 r_goto
 id|err_out
 suffix:semicolon
+)brace
 multiline_comment|/* Find the attribute list attribute if present. */
 r_if
 c_cond
