@@ -3454,12 +3454,13 @@ suffix:semicolon
 r_if
 c_cond
 (paren
+op_logical_neg
+(paren
+id|ctx
+op_assign
 id|get_attr_search_ctx
 c_func
 (paren
-op_amp
-id|ctx
-comma
 id|NTFS_I
 c_func
 (paren
@@ -3467,6 +3468,7 @@ id|vol-&gt;mft_ino
 )paren
 comma
 id|m
+)paren
 )paren
 )paren
 (brace
@@ -4170,12 +4172,13 @@ suffix:semicolon
 r_if
 c_cond
 (paren
+op_logical_neg
+(paren
+id|ctx
+op_assign
 id|get_attr_search_ctx
 c_func
 (paren
-op_amp
-id|ctx
-comma
 id|NTFS_I
 c_func
 (paren
@@ -4183,6 +4186,7 @@ id|vol-&gt;vol_ino
 )paren
 comma
 id|m
+)paren
 )paren
 )paren
 (brace
